--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Judson Tucker by jtucker276</title>
+    <title>Judson Tucker</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -17,10 +17,6 @@
       <header>
         <h1>Judson Tucker</h1>
         <p>An example website using GitHub pages</p>
-
-
-        <p class="view"><a href="https://github.com/jtucker276">View My GitHub Profile</a></p>
-
       </header>
       <section>
         <h3>
